--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,57 @@ layout: default
           <i class="fa fa-twitter blue"></i><a href="https://twitter.com/share" class="twitter-share-button">Tweet This</a>
         </div>
       </div>   
+      {% unless page.categories == empty %}
+       <span style="font-size:11px;">Categories:
+		<ul class="tag_box" style="display:inline;">
+		  {% assign categories_list = page.categories %}
+		  {% if categories_list.first[0] == null %}
+			{% for category in categories_list %} 
+				<li style="list-style-type: none; display: inline;"><a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category }}-ref">
+					{{ category | join: "/" }} <span>({{ site.categories[category].size }})</span>
+					{% unless forloop.last %},{% endunless %}
+				</a></li>
+			{% endfor %}
+		  {% else %}
+			{% for category in categories_list %} 
+				<li style="list-style-type: none; display: inline;"><a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category[0] }}-ref">
+					{{ category[0] | join: "/" }} <span>/{{ category[1].size }})</span>
+				</a></li>
+			{% endfor %}
+		  {% endif %}
+		</ul></span>
+		{% endunless %}  
+        <div class="clearfix" />
+		{% unless page.tags == empty %}
+		<span style="font-size:11px;">Tags <i class="fa fa-tags"></i>:
+        <ul class="tag_box" style="list-style-type: none; display: inline;">
+		  {% assign tags_list = page.tags %}
+		  {% if tags_list.first[0] == null %}
+			{% for tag in tags_list %} 
+				<li style="list-style-type: none; display: inline;">
+					<a href="{{ site.BASE_PATH }}/{{ site.tags_path }}#{{ tag }}-ref">
+					{{ tag }} <span>({{ site.tags[tag].size }})</span>
+					{% unless forloop.last %},{% endunless %}
+					</a>
+				</li>
+			{% endfor %}
+		  {% else %}
+			{% for tag in tags_list %} 
+				<li style="list-style-type: none; display: inline;">
+					<a href="{{ site.BASE_PATH }}/{{ site.tags_path }}#{{ tag[0] }}-ref">
+						{{ tag[0] }} <span>({{ tag[1].size }})</span>
+						{% unless forloop.last %},{% endunless %}
+					</a>
+				</li>
+		   	
+			{% endfor %}
+		  {% endif %}
+		  {% assign tags_list = nil %}
+		</ul>
+		{% endunless %}  
+
+		<hr>
+
      <div class="disqus">
         <div id="disqus_thread"></div>
       </div>
