--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,7 +22,7 @@
         <div class="sidebar__profile-bio clear">
           <p>
             Senior Web Developer @ <a href="https://athletesinaction.org/#/?utm_source=ajgarrett.github.io" target="_blank">Athletes In Action</a><br>
-            .NET, Angular JS<br>
+            .NET, Angular JS, Node JS<br>
             Husband, Father, and Disciple
           </p>
         </div>
