--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -176,8 +176,8 @@
 }
 
 .post-list {
-    margin-left: 0;
-    list-style: none;
+    margin-left: 4px;
+    /*list-style: none;*/
 
     > li {
         margin-bottom: $spacing-unit;
