theme/layout updates

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,21 +14,21 @@
     <div class="sidebar clear">
       <div class="sidebar__profile">
         <a href="/">
-          <img src="/assets/media/andy.jpg" alt="Andy" class="sidebar__profile-img">
+          <img src="/assets/media/headshot.jpg" alt="Andy" class="sidebar__profile-img">
         </a>
         <h1 class="sidebar__profile-name">
           Andy Garrett
         </h1>
         <div class="sidebar__profile-bio clear">
           <p>
-            Senior Web Developer @ <a href="https://athletesinaction.org/#/?utm_source=ajgarrett.github.io" target="_blank">Athletes In Action</a><br>
-            .NET, Angular JS, Node JS<br>
+            Engineering Manager @ <a href="https://miletwo.us" target="_blank">Mile Two</a><br>
+            React, GraphQL, .NET, SQL, Node JS<br>
             Husband, Father, and Disciple
           </p>
         </div>
         <div class="sidebar__profile-social">
-          <a href="//twitter.com/andyjgarrett" class="twitter-follow-button" data-show-count="true">
-            <i class="fa fa-twitter"></i> @andyjgarrett
+          <a href="//linkedin.com/in/andyjgarrett" class="twitter-follow-button" data-show-count="true">
+            <i class="fa fa-linkedin"></i> @andyjgarrett
           </a>
         </div>
         <nav class="sidebar__profile-nav">
