fix: Update Title

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <title>Andy Garrett {% if page.tagline %} - {{ page.title }} {% endif %}</title>
     <meta name="description" content="DevOps Engineer - ASP.NET, Javascript.">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
     <link href="//www.google-analytics.com" rel="dns-prefetch">
